--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-compressor = "^2.4.1"
 django-environ = "^0.5.0"
 django-model-utils = "^4.1.1"
 django-redis = "^5.0.0"
+django-storages = "^1.11.1"
 django-webpack-loader = "^1.3.0"
 gunicorn = "^20.1.0"
 hiredis = "2.0.0"
