--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,51 +5,51 @@ description = "A Django application for the Walk Up Effect organization."
 authors = ["Cameron Shannon <cameroncshannon@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-argon2-cffi = "21.1.0"
-Django = "^3.2.6"
-django-allauth = "^0.45.0"
-django-crispy-forms = "^1.12.0"
-django-compressor = "^2.4.1"
-django-environ = "^0.5.0"
+python = "^3.10"
+argon2-cffi = "21.3.0"
+Django = "^4.0.4"
+django-allauth = "^0.50.0"
+django-crispy-forms = "^1.14.0"
+django-compressor = "^3.1.0"
+django-environ = "^0.8.1"
 django-model-utils = "^4.1.1"
 django-redis = "^5.0.0"
 django-storages = "^1.11.1"
 django-webpack-loader = "^1.3.0"
 gunicorn = "^20.1.0"
 hiredis = "2.0.0"
-pytz = "2021.1"
-python-slugify = "5.0.2"
-Pillow = "8.3.1"
-psycopg2 = "2.9.1"
-rcssmin = "1.0.6"
-redis = "3.5.3"
+pytz = "2022.1"
+python-slugify = "6.1.1"
+Pillow = "^9.1.0"
+psycopg2 = "2.9.3"
+rcssmin = "1.1.0"
+redis = "4.2.2"
 stripe = "^2.60.0"
-uvicorn = "^0.15.0"
-whitenoise = "5.3.0"
+uvicorn = "^0.17.6"
+whitenoise = "6.0.0"
 
 
 
 [tool.poetry.dev-dependencies]
-black = "^21.8b0"
-coverage = "^5.5"
+black = "^22.3.0"
+coverage = "^6.3.2"
 django-coverage-plugin = "^2.0.0"
-django-extensions = "3.1.3"
-django-debug-toolbar = "^3.2.2"
+django-extensions = "3.1.5"
+django-debug-toolbar = "^3.2.4"
 django-stubs = "^1.8.0"
 factory-boy = "^3.2.0"
-flake8 = "3.9.2"
-flake8-isort = "^4.0.0"
+flake8 = "4.0.1"
+flake8-isort = "^4.1.1"
 ipdb = "0.13.9"
-mypy = "^0.910"
-psycopg2-binary = "2.9.1"
-pylint-django = "^2.4.4"
-pytest = "6.2.5"
-pytest-django = "4.4.0"
+mypy = "^0.942"
+psycopg2-binary = "2.9.3"
+pylint-django = "^2.5.3"
+pytest = "7.1.1"
+pytest-django = "4.5.2"
 pytest-sugar = "0.9.4"
 Sphinx = "4.1.2"
 sphinx-autobuild = "2021.3.14"
-watchgod = "0.7"
+watchgod = "0.8.2"
 Werkzeug = "1.0.1"
 #pre-commit = "^2.14.1"
 
